feat: cria rota de envio de fotos das rotas do app
